[package]
name = "blahaj"
version = "0.1.0"
edition = "2021"

[dependencies]
simple_logger = "5.0"
log = "0.4"
serde_json ="1.0"
serde = { version = "1.0", features = ["derive"] }
# fastnbt = "2.5"
fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
# quartz_nbt = {version = "0.2.9", features = ["serde"]}
